[package]
name = "advent-of-code-2019-rust"
version = "0.1.0"
authors = ["Rosetta Roberts <roberose@isu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day-1-1"
path = "src/day-1-1.rs"

[[bin]]
name = "day-1-2"
path = "src/day-1-2.rs"

[[bin]]
name = "day-2-1"
path = "src/day-2-1.rs"
[[bin]]
name = "day-2-2"
path = "src/day-2-2.rs"

[[bin]]
name = "day-3-1"
path = "src/day-3-1.rs"
[[bin]]
name = "day-3-2"
path = "src/day-3-2.rs"

[[bin]]
name = "day-4-1"
path = "src/day-4-1.rs"
#[[bin]]
#name = "day-4-2"
#path = "src/day-4-2.rs"

[[bin]]
name = "day-5"
path = "src/day-5.rs"

[[bin]]
name = "day-6"
path = "src/day-6.rs"

[[bin]]
name = "day-7"
path = "src/day-7.rs"

[[bin]]
name = "day-7-2"
path = "src/day-7-2.rs"

[[bin]]
name = "day-8"
path = "src/day-8.rs"
[[bin]]
name = "day-8-2"
path = "src/day-8-2.rs"

[[bin]]
name = "day-9"
path = "src/day-9.rs"

[[bin]]
name = "day-12-1"
path = "src/day-12-1.rs"
[[bin]]
name = "day-12-2"
path = "src/day-12-2.rs"


[dependencies]
regex = "1"
itertools = "0.8.2"
num-bigint = "0.2.3"
num-traits = "0.2.10"
failure = "0.1.6"
failure_derive = "0.1.6"
enum-primitive-derive = "0.1.2"